infra/k8s/orders-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - image: us.gcr.io/practical-theme-396423/orders
          name: orders
---
apiVersion: v1
kind: Service
metadata:
  name: orders-svc
spec:
  type: ClusterIP
  selector:
    app: orders
  ports:
    - name: orders
      protocol: TCP
      targetPort: 3000 # this is the one that the container exposes, in other words the one we run the app at from the container.
      port: 3000 # this is the one that the service exposes
