infra/k8s/payments-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - image: ticketing/payments
          name: payments
---
apiVersion: v1
kind: Service
metadata:
  name: payments-svc
spec:
  type: ClusterIP
  selector:
    app: payments
  ports:
    - name: payments
      protocol: TCP
      targetPort: 3000 # this is the one that the container exposes, in other words the one we run the app at from the container.
      port: 3000 # this is the one that the service exposes
