infra/k8s/tickets-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - image: us.gcr.io/ticketing-udemy-steves-course/tickets
          imagePullPolicy: Always
          name: tickets
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-svc
spec:
  type: ClusterIP
  selector:
    app: tickets
  ports:
    - name: tickets
      protocol: TCP
      targetPort: 3000 # this is the one that the container exposes, in other words the one we run the app at from the container.
      port: 3000 # this is the one that the service exposes
